<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Linear Layout</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string><string name="edit_text">Enter Text Here</string>
    
    <string name="textview_text">Please enter whole numbers one at a time. After each number click \&quot;Click Me.\&quot; When done click \&quot;Done\&quot; to get your average!</string>
    <string name="button_text">Click Me</string>
    <string name="done_button">Done</string>
    <string name="average_textview">Average:</string>
    <string name="odd_textview">Is the average odd?</string>
    <string name="reset_button">Reset</string>
    <color name="bg_color">#00CCCC</color>

</resources>
